# fleet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  integration.yaml  parity.yaml  release.yaml
commands/: fleet-cancel.md  fleet-cost.md  fleet-explain.md  fleet-plan.md  fleet-ship.md  fleet-status.md  fleet-swarm.md  fleet-verify.md  fleet.md
deploy/: cronjob-reconciler.yaml  k8s-smoke.sh
deploy/helm/: Chart.yaml  values.yaml
docs/: 2026-05-24-sp-f-fleet-mcp-boost-design.md  INTEGRATION.md  RUNBOOK.md  SPEC.md
scripts/: install-commands.sh  install-skills.sh
skills/cost/: SKILL.md
skills/explain/: SKILL.md
skills/plan/: SKILL.md
skills/router/: SKILL.md
skills/ship/: SKILL.md
skills/swarm/: SKILL.md
skills/verify/: SKILL.md
src/fleet/: __main__.py  cache.py  circuit.py  config.py  coordination.py  dashboard.py  graphiti_client.py  metrics.py  reconciler.py  registry.py  router.py  server.py  skills.py  telemetry.py  tools.py
tests/e2e/: host_drivers.py  test_parity.py
tests/integration/: conftest.py  docker-compose.yaml  graphiti_stub.py  test_full_flow.py
tests/unit/: test_cache.py  test_circuit.py  test_config.py  test_coordination.py  test_dashboard.py  test_dispatcher_base.py  test_dispatcher_lifecycle.py  test_dispatcher_phase.py  test_dispatcher_subagent.py  test_dispatcher_swarm.py  test_dispatcher_verify.py  test_graphiti_client.py  test_llm_chain.py  test_main.py  test_main_stub.py  test_metrics.py  test_reconciler.py  test_registry.py  (+7 more)
(+35 files in other folders)
