[project]
name = "fleet"
version = "0.1.0"
description = "Unified meta-orchestrator wrapping ruflo, superpowers, gsd"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "jinja2>=3.1",
    "prometheus-client>=0.20",
]

[project.scripts]
fleet-reconciler = "fleet.reconciler:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fleet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: hermetic unit test (default)",
    "integration: requires docker compose stack",
    "e2e: requires running fleet-mcp + claude/goose/openclaw",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/fleet"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
